fixed bug with rendering sidebar on small displays

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+* {
   margin: 0;
   padding: 0;
 }
@@ -6,8 +6,9 @@ body {
 .container {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  height: 100lvh;
-  width: 100lvw
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
 }
 
 .side_panel {
